<resources>
    <string name="app_name">Tammeni</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="news">NEWS</string>
    <string name="settings">SETTINGS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="success">Success</string>
    <string name="your_email_has_been_updated_n_successfully">Your e-mail has been updated\n successfully.</string>
    <string name="your_password_has_been_updated_n_successfully">Your password has been updated\n successfully.</string>
    <string name="your_username_has_been_updated_successfully">Your username has been updated successfully.</string>
    <string name="your_email_has_been_sent_successfully">Your e-mail has been sent successfully.</string>
    <string name="return_to_dashboard">Return To DashBoard</string>
    <string name="change_language">Change Language</string>
    <string name="change_username">Change Username</string>
    <string name="change_e_mail">Change E-mail</string>
    <string name="change_password">Change Password</string>
    <string name="stay_in_touch">Stay in Touch.</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="yesterday">Yesterday</string>
    <string name="now">Now</string>
    <string name="today_s_timeline">Tammeni Timeline</string>
    <string name="test_now">Test Now</string>
    <string name="countries">Countries</string>
    <string name="donate_now">Donate Now</string>
    <string name="search">Search</string>
    <string name="skip">Skip</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="back_to_login">Back to login</string>
    <string name="please_enter_a_country_you_would_like_to_test_on">Please enter a country you would like to test on</string>
    <string name="result">Result</string>
    <string name="enter_your_gender">Enter gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_your_age">Enter age</string>
    <string name="e_g_18">e.g (18)</string>
    <string name="e_g_2_times">e.g (2 times)</string>
    <string name="how_many_times_per_day_do_you_wash_your_hands">How many times do you wash your hands per day?</string>
    <string name="do_you_smoke">Smoking Habit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="how_many_individuals_do_you_encounter_each_day_including_family_members">Number of encounters each week (Including family members)</string>
    <string name="e_g_20_person">e.g (20 person)</string>
    <string name="what_is_your_social_distancing_level_n_low_medium_high">What is your social distancing level?\n (Low, Medium, High)</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="calculate">Calculate</string>
    <string name="save">Save</string>
    <string name="infection_probability">Infection Probability</string>
    <string name="this_is_your_probability_of_getting_infected_with_the_coronavirus_covid_19_based_on_the_variables_you_entered">This is your probability of getting infected with the Coronavirus (Covid-19) based on the variables you entered.</string>
    <string name="fatality_probability">Fatality Probability</string>
    <string name="this_is_your_probability_of_dying_from_the_coronavirus_covid_19_based_on_the_variables_you_entered">This is your probability of dying from the Coronavirus (Covid-19) based on the variables you entered.</string>
    <string name="probability_of_infection_after_two_weeks">Probability of infection after two weeks</string>
    <string name="this_is_your_probability_of_getting_infected_with_the_coronavirus_after_two_weeks_if_you_keep_behaving_the_same_way_regarding_social_distancing_hand_washing_etc">This is your probability of getting infected with the Coronavirus after two weeks if you keep behaving the same way regarding social distancing, hand washing, etc..</string>
    <string name="days_survived_experimental">Days Survived - Experimental</string>
    <string name="this_is_the_number_of_days_you_will_last_before_contracting_the_coronavirus_please_keep_in_mind_that_this_value_is_only_experimental_and_shouldn_t_be_taken_seriously_or_as_a_real_indicator">This is the number of days you will last before contracting the Coronavirus. Please keep in mind that this value is only experimental and shouldn\'t be taken seriously or as a real indicator.</string>
    <string name="country">Country:</string>
    <string name="change_email">Change E-mail</string>
    <string name="enter_new_email_address">Enter New E-mail address.</string>
    <string name="new_email">New E-mail</string>
    <string name="confirm_new_email">Confirm New E-mail</string>
    <string name="enter_your_preferred_language">Enter Your Preferred Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="enter_new_password">Enter New Password.</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change">Change</string>
    <string name="enter_new_username">Enter New Username.</string>
    <string name="new_username">New Username</string>
    <string name="rank">Rank:</string>
    <string name="username">Username:</string>
    <string name="days_survived">Days survived:</string>
    <string name="total_cases">Total Cases</string>
    <string name="population">Population</string>
    <string name="active_cases">Active Cases</string>
    <string name="recovered">Recovered</string>
    <string name="home">Home</string>
    <string name="reset">Reset</string>
    <string name="enter_your_email_address">Enter your e-mail address</string>
    <string name="current_password">Current Password</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="have_you_been_medically_diagnosed_with_covid_19">Have you been medically diagnosed with Covid-19?</string>
    <string name="required">Required</string>
    <string name="calculating_the_probability_of_getting_infected_with_covid_19_depending_on_certain_values">Tammeni provides the service of calculating the probability of getting infected with Covid-19 depending on certain values.</string>
    <string name="choose_your_country">Choose your country</string>
    <string name="neversmoke">Never</string>
    <string name="quit_more_than_10_years_ago">Quit more than 10 years ago</string>
    <string name="quit_more_than_5_years_ago">Quit more than 5 years ago</string>
    <string name="quit_recently">Quit recently</string>
    <string name="light_smoker">Light smoker</string>
    <string name="medium_smoker">Medium smoker</string>
    <string name="heavy_smoker">Heavy smoker</string>
    <string name="how_often_did_you_drink_alcohol_within_the_last_2_weeks">alcohol consumption within the last 2 weeks?</string>
    <string name="how_often_do_you_wash_your_hands">Hand washing habit</string>
    <string name="never">Never</string>
    <string name="rarely">Rarely</string>
    <string name="sometimes">Sometimes</string>
    <string name="often">Often</string>
    <string name="always">Always</string>
    <string name="do_you_use_an_alcohol_hand_sanitizer_to_clean_your_hands">Alcohol hand sanitization use</string>
    <string name="do_you_wear_a_mask_outdoors">Habit of wearing a mask outdoor</string>
    <string name="do_you_suffer_from_any_of_the_following_symptoms">Are any of the following symptoms available?</string>
    <string name="fever">Fever</string>
    <string name="dry_cough">Dry cough</string>
    <string name="tiredness">Tiredness</string>
    <string name="difficulty_of_breathing">Difficulty of breathing</string>
    <string name="chest_pain">Chest pain</string>
    <string name="loss_in_speech_or_movement">Loss in speech or movement</string>
    <string name="how_many_contacts_have_you_had_with_a_person_infected_with_covid_19_within_the_last_month">Number of contacts made with a person medically diagnosed with Covid-19 within the last month?</string>
    <string name="do_you_work_or_live_in_a_nursing_home">Working or living in a nursing home?</string>
    <string name="are_you_a_health_worker">Health Worker?</string>
    <string name="please_select_all_that_applies">Please select all that applies:</string>
    <string name="asthma">Asthma</string>
    <string name="kidney_disease">Kidney disease</string>
    <string name="liver_disease">Liver disease</string>
    <string name="compromised_immunity_system">Compromised immunity system</string>
    <string name="complications_or_diseases_in_heart">Complications or diseases in heart</string>
    <string name="lung_disease">Lung disease</string>
    <string name="diabetes">Diabetes</string>
    <string name="hypertension">Hypertension</string>
    <string name="hiv">HIV</string>
    <string name="current_diseases">Current Diseases</string>
    <string name="_1_5_cigarettes_a_day">1-5 cigarettes a day</string>
    <string name="_6_20_cigarettes_a_day">6-20 cigarettes a day</string>
    <string name="_20_cigarettes_a_day">20+ cigarettes a day</string>
    <string name="new_cases">New Cases</string>
    <string name="new_deaths">New Deaths</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_go_back_to_the_dashboard_n_the_data_wont_be_saved">Are you sure you want to go back to the dashboard?\n (the data won\'t be saved!)</string>
    <string name="note_the_information_that_you_enter_will_be_used_only_to_further_research_in_the_area_of_covid_19_the_calculations_made_are_only_predictions_based_on_statstical_models_they_shouldn_t_be_taken_as_a_medical_indication">Note: The information that you enter will be used only to further research in the area of Covid-19. The calculations made are only predictions based on statstical models. They shouldn\'t be taken as a medical indication.</string>
    <string name="results">Results</string>
    <string name="next">Next</string>
    <string name="next2">next</string>
    <string name="additional_information">Additional Information</string>
    <string name="trending">Trending</string>
    <string name="today_s_news">Today\'s News</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="general_information">General Information</string>
    <string name="this_shows_the_effect_of_your_social_distancing_level_on_your_chances_of_getting_infected_make_sure_to_follow_your_countries_guidelines_and_to_home_quarantine_whenever_possible_to_decrease_it">This shows the effect of your social distancing level on your chances of getting infected. Make sure to follow your countries\' guidelines and to home quarantine whenever possible to decrease it.</string>
    <string name="you_can_change_it_from_settings_anytime">You can change it from settings anytime.</string>
    <string name="location_services_are_disabled">Location services are disabled.</string>
    <string name="please_enable_your_location_services">Please enable your location services.</string>
    <string name="swipe_to_refresh_if_it_s_on">Swipe to refresh if it\'s on.</string>
    <string name="location_services_are_enabled">Location services are enabled.</string>
</resources>