<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_start_menu"
            android:checkable="true"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/ic_rate_us"
            android:title="@string/rate_us" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact_mail"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_log_out"
            android:title="@string/logout" />

    </group>


<!--    <item android:title="Communicate">-->

<!--        <menu>-->

<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_dashboard"-->
<!--                android:title="Share" />-->

<!--            <item-->
<!--                android:id="@+id/nav_rate"-->
<!--                android:icon="@drawable/icon_arrow_forward"-->
<!--                android:title="Rate Us" />-->
<!--        </menu>-->
<!--    </item>-->
</menu>

