<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Testnow_fragment_1">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true"
        android:overScrollMode="always"
        android:scrollbarSize="@dimen/app_margin_8dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/current_diseases"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:alpha="0.9"
                android:gravity="center"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/josefin_sans_bold"
                        android:text="@string/please_select_all_that_applies"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkbox_asthma"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/asthma"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <CheckBox
                            android:id="@+id/checkbox_kidney_disease"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/kidney_disease"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <CheckBox
                            android:id="@+id/checkbox_liver_disease"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/liver_disease"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <CheckBox
                            android:id="@+id/checkbox_immunity_disease"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/compromised_immunity_system"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <CheckBox
                            android:id="@+id/checkbox_heart_disease"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/complications_or_diseases_in_heart"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <CheckBox
                            android:id="@+id/checkbox_Lung_disease"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/lung_disease"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <CheckBox
                            android:id="@+id/checkbox_diabetes"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/diabetes"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <CheckBox
                            android:id="@+id/checkbox_hypertension"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/hypertension"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <CheckBox
                            android:id="@+id/checkbox_HIV"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/hiv"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>