<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Intro_app_slider_3">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/SwipeRefresh_intro_app_page_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/location_disabled_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/close_icon"
                    android:visibility="visible"
                    app:tint="@color/colorRed" />

                <TextView
                    android:id="@+id/location_disabled_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/location_services_are_disabled"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/location_disabled_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/please_enable_your_location_services"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/if_location_is_on_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/swipe_to_refresh_if_it_s_on"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorRed"
                    android:textSize="18sp"
                    android:visibility="visible" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/location_enabled_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_correct"
                    android:visibility="gone"
                    app:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/location_enabled_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_services_are_enabled"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:visibility="gone" />


            </LinearLayout>

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>