<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"

    android:background="#80000000"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorLight"
        app:cardCornerRadius="15dp">

        <ImageView
            android:id="@+id/close_info_smoking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:elevation="5dp"
            android:src="@drawable/close_icon"
            app:tint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_outline_info" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="start"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/info_light_smoker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/josefin_sans_bold"
                            android:text="@string/light_smoker"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/info_light_smoker_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/josefin_sans_bold"
                            android:text="@string/_1_5_cigarettes_a_day"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="18sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/info_medium_smoker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/josefin_sans_bold"
                            android:text="@string/medium_smoker"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/info_medium_smoker_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/josefin_sans_bold"
                            android:text="@string/_6_20_cigarettes_a_day"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="18sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/info_heavy_smoker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/josefin_sans_bold"
                            android:text="@string/heavy_smoker"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/info_heavy_smoker_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/josefin_sans_bold"
                            android:text="@string/_20_cigarettes_a_day"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="18sp" />


                    </LinearLayout>
                </LinearLayout>


                <Button
                    android:id="@+id/button_close_info_smoking"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_light_green_round"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/close"
                    android:textColor="@color/colorWhite" />


                <!--                <Button-->
                <!--                    android:id="@+id/buttonNegative"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_gravity="center_horizontal"-->
                <!--                    android:layout_marginTop="20dp"-->
                <!--                    android:fontFamily="@font/josefin_sans_bold"-->
                <!--                    android:background="@drawable/button_red_round"-->
                <!--                    android:text="Exit"-->
                <!--                    android:textColor="@color/colorWhite" />-->


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>